# DCC059-TeoriaDosGrafos

./: .gitignore  Aresta.cpp  Aresta.h  CMakeLists.txt  CaixeiroViajante.cpp  CaixeiroViajante.h  Grafo.cpp  Grafo.h  ListaArestas.cpp  ListaArestas.h  MenuPrincipal.cpp  MenuPrincipal.h  No.cpp  No.h  README.md  ReadFile.cpp  ReadFile.h  Saidas.txt  main.cpp
Arquivos/: LEIAME.txt
Classes/: Aresta.cpp  Aresta.h  Grafo.cpp  Grafo.h  LeituraArquivos.cpp  LeituraArquivos.h  ListaArestas.cpp  ListaArestas.h  MenuPrincipal.cpp  MenuPrincipal.h  No.cpp  No.h  ReadFile.cpp
Docs/: Slides PCV.pptx
Entrada/: [Referencia] Best por instancia.xlsx  fnl4461.tsp
Instancias/: LEIAME.txt  TesteSimples.txt  bier127.tsp  eil51.tsp  testParserParsed.txt
Output/: Saída.txt
Utilitários/ArquivoGrafoParser/: ArquivoGrafoParser.csproj  Program.cs
Utilitários/ArquivoGrafoParser/Properties/: AssemblyInfo.cs
