cmake_minimum_required(VERSION 3.14)
project(TrabalhoGrafos)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabalhoGrafos main.cpp MenuPrincipal.cpp MenuPrincipal.h Aresta.cpp Aresta.h No.cpp No.h Grafo.cpp Grafo.h ReadFile.cpp ReadFile.h ListaArestas.cpp ListaArestas.h CaixeiroViajante.cpp CaixeiroViajante.h)